syntax = "proto3";

option csharp_namespace = "TradeBot.Account.AccountService.v1";

package tradebot.account.account_service.v1;

service AcountService {
	rpc Login (LoginRequest) returns (LoginReply);
	rpc Register (RegisterRequest) returns (RegisterReply);
	rpc IsValidSession (SessionRequest) returns (SessionReply);
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginReply {
	bool successful = 1;
	int32 session_id = 2;
}

message RegisterRequest {
	string username = 1;
	string email = 2;
	int32 phone_number = 3;
	string password = 4;
	string verify_password = 5;
}

message RegisterReply {
	bool successful = 1;
	int32 session_id = 2;
}

//отправляет текущую сессию в метод
message SessionRequest {
	int32 session_id = 1;
}

//после проверки
message SessionReply {
	bool is_valid = 1;
}

//Вся информация о пользователе для отображения в UI
message UserInfo {
	int32 id = 1;
	int32 session_id = 2;
	string username = 3;
	string email = 4;
	int32 phone_number = 5;
	string password = 6;
}
